# APICredDev

./: .gitignore  404.html  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  project.meta.json  sitemap.xml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_drop_provider_default_base_url.py  0003_audit_llm_messages.py  0004_apicred_hardening_features.py  0005_ops_console_policy_observability.py  0006_billing_principals.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  (+8 more)
backend/tests/: conftest.py  test_access_policy_api.py  test_access_policy_llm_enforcement.py  test_access_policy_service.py  test_admin_provider_health_api.py  test_admin_usage_analytics.py  test_api_direct_calls.py  test_api_extended.py  test_api_smoke.py  test_audit_redaction_retention.py  test_auth_basalt_oauth.py  test_basalt_proxy_api.py  test_basaltpass_client.py  test_billing.py  test_billing_remote_wallet.py  test_core_deps_main.py  test_graphql_security.py  test_keypool_rotation.py  test_llm_extended.py  test_llm_unit_coverage.py  test_observability.py  test_openai_bootstrap.py  test_production_config_guard.py  test_provider_benchmark.py  test_quota_ledger.py  test_quota_lua.py  test_quota_reconciliation.py  test_quota_service.py  test_redeem.py  test_route_failover.py  test_runtime_auth_verify.py  test_secret_encryption_rotation.py  test_secrets_crypto.py  test_security_hardening.py  test_services_expanded.py  test_stripe_webhook.py
sdk/python/: README.md  pyproject.toml
(+302 files in other folders)
