[tool.poetry]
name = "apicred-backend"
version = "0.1.0"
description = "apicred backend"
authors = ["apicred"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version="^0.30.0", extras=["standard"]}
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = {version="^1.7.4", extras=["argon2"]}
httpx = "^0.27.0"
redis = "^5.0.0"
stripe = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

