[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apicred-sdk"
version = "0.1.0"
description = "Production-ready Python SDK for APICred APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apicred_sdk*"]

